src/index.css
/* this makes the elements be flush with the borders */
body, html { 
  margin: 0;
  padding: 0;
  --main-color: rgb(30,31,38);
  --secondary-color: white;
  --accent-color: rgb(165, 165, 165); 
  --action-accent-color: rgb(234, 200, 117);

  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
}

button {
  font-family: inherit;
}

.App {
  width: 100%;
  height: 100vh;
}

.AppContent {
  width: 100%;
  height: 100vh;
}

.Navbar {
  display: flex;
  background-color: var(--main-color);
  align-items: center;
  justify-content: center;
  height: 6vh;
  width: 100vw;
  min-height: 50px;
  padding: 0 0 0 0;

  position: fixed;
  z-index: 1000;
}

.NavbarLeftHalfButtons {
  /* border-color: greenyellow;
  border-style: solid; */
  height: 100%;
  width: 50%;
  text-align: left;
}

.NavbarRightHalfButtons {
  /* border-color: red;
  border-style: solid; */
  height: 100%;
  width: 50%;
  text-align: right;
  align-content: center;

  padding-right: 1vw;
}

.NavbarButton {
  color: var(--secondary-color);
  background-color: var(--main-color);
  border-color: var(--secondary-color);
  height: 40px;
  width: 100px;
  border-style: solid;
  margin: 5px 5px 5px 5px;
  border-radius: 5px;

  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
  cursor: pointer;

  outline: none;

  transition: .2s;
}

.NavbarButton:hover {
  background-color: var(--secondary-color);
  color: var(--main-color);
  transition: .2s;
}

.NavbarButton:active {
  color: var(--main-color);
  background-color: var(--action-accent-color);
  border-color: var(--action-accent-color);
  transition: .05s;
}

.SettingsWindowContainer {
  position: absolute;
  z-index: 99999;
  left: 0px;
  top: 0px;
  width: 25vw;
  height: 100%;
  background-color: rgb(200, 197, 255);
}

.Board {
  align-items: center;
  align-content: center;
  text-align: center;
}

.BoardNote {
  text-align: center;
  vertical-align: middle;
  align-items: center;
  background-color: var(--main-color);
  border-radius: 5px 0px 5px 5px;
  border: 2px;
  border-style: solid;
  border-color: var(--secondary-color);
  width: 150px;
  height: 100px;
  position: absolute;
  padding: 0 0 0 0;
}

.BoardNoteCloseMarkerContainer {
  display: flex;
}

.BoardNoteCloseMarker {
  cursor: pointer;
  color: white;
  text-align: right;
  right: 0;
  width: 10px;

  font-family: monospace;
  font-size: 120%;
}

.BoardNoteTextBox {
  width: 80%;
  margin: 0 0 0 0;
  height: 70%;
  resize: none;
  background: none;
  border: none;
  outline: none;
  color: white;
}

.InstructionText {
  color: var(--accent-color);
}

.MobileSupport {
  display: none;
}

@media (max-width: 768px), (orientation: landscape) and (max-height: 500px) {
  .AppContent {
    display: none; /* Hide on mobile */
  }

  .MobileSupport {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    text-align: center;
    padding: 20px;
  }
}

